# tspw-graph

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
apps/api/: pyproject.toml
apps/api/src/app/: main.py  settings.py
apps/api/src/app/auth/: __init__.py  admin_router.py  dependencies.py  models.py  recover.py  repository.py  router.py  schemas.py  security.py  service.py
apps/api/src/app/extraction/: azure_openai.py  azure_responses.py  azure_responses_client.py  fixed.py  models.py  normalize.py  ollama.py  openai_compatible.py  pipeline.py  prompting.py  (+3 more)
apps/api/tests/: test_graph_performance_script.py  test_settings_model_profiles.py
apps/api/tests/auth/: test_protected_routes.py  test_repository.py  test_router.py  test_security.py  test_service.py
apps/api/tests/extraction/: test_attribute_pipeline.py  test_azure_responses_client.py  test_models.py  test_normalize.py  test_pipeline.py  test_prompting.py  test_provider_contracts.py  test_providers.py  test_rules.py
apps/api/tests/graph/: test_importer.py  test_router.py  test_service.py
apps/api/tests/jobs/: test_attribute_jobs.py  test_quality.py  test_repository.py  test_router.py
apps/api/tests/ontology/: test_catalog.py
apps/api/tests/projects/: test_files.py  test_repository.py  test_router.py
apps/api/tests/qa/: test_intents.py  test_live_api.py  test_llm.py  test_router.py  test_service.py  test_suggestions.py
apps/api/tests/review/: test_repository.py  test_router.py  test_rules.py  test_service_entities.py
apps/api/tests/worker/: test_runner.py  test_worker_logging.py
(+122 files in other folders)
